fixed logo alignment issues on tablet portrait mode

--- a/app/scss/Header.scss
+++ b/app/scss/Header.scss
@@ -227,7 +227,11 @@
         height: 750px;
         margin: auto;
         .logo {
-          width: 80%
+          width: 80%;
+          svg {
+            margin: 0 auto;
+            display: block;
+          }
         }
 
         .description-wrapper {
